<resources>
    <string name="app_name">SRX Advisor</string>
    <string name="srx_customer_service_phone">+65 6635 3388</string>
    <string name="srx_customer_service_email">customerservice@srx.com.sg</string>
    <string name="label_srx">SRX</string>
    <string name="label_edit">Edit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_done">Done</string>
    <string name="label_all">All</string>
    <string name="label_public">Public</string>
    <string name="label_agents">Agents</string>
    <string name="label_group">Group</string>
    <string name="label_view_to_offer">View to offer</string>
    <string name="label_clear">Clear</string>
    <string name="label_search">Search</string>
    <string name="label_any">Any</string>
    <string name="label_ok">OK</string>
    <string name="label_success">Success&#160;!</string>
    <string name="label_save">Save</string>
    <string name="label_title_from">From</string>
    <string name="label_title_to">To</string>
    <string name="label_customer_enquiry">Customer Enquiry</string>
    <string name="label_price">\$%s</string>
    <string name="label_percent">%s%%</string>
    <string name="label_proceed">Proceed</string>
    <string name="label_small_or">or</string>
    <string name="dot">⋅</string>
    <string name="label_choose_mail">Choose mail&#8230;</string>
    <string name="label_small_coming_soon">Coming Soon!</string>
    <string name="label_latest">Latest</string>
    <string name="label_no_photo_uploaded">No photo uploaded</string>
    <string name="label_no_internet_connection">No internet connection</string>
    <string name="date_placeholder">Unknown date</string>
    <string name="progress_dialog_message">Processing. Please wait.</string>
    <string name="content_description_button_expand">Expand</string>
    <string name="content_description_button_collapse">Collapse</string>
    <string name="toast_download_report_failed_generic">Download report failed.</string>
    <string name="toast_copied_link">Link copied.</string>
    <string name="initial_letter_sunday">S</string>
    <string name="initial_letter_monday">M</string>
    <string name="initial_letter_tuesday">T</string>
    <string name="initial_letter_wednesday">W</string>
    <string name="initial_letter_thursday">T</string>
    <string name="initial_letter_friday">F</string>
    <string name="initial_letter_saturday">S</string>
    <string name="number_sqft">%s sqft</string>
    <plurals name="number_year">
        <item quantity="one">%s year</item>
        <item quantity="other">%s years</item>
    </plurals>
    <string name="number_percentage">%s&#65130;</string>
    <string name="content_description_search">Search</string>
    <string name="fail_generic_contact_srx">Failed to process your request. Please contact
        customerservice@srx.com.sg for help.
    </string>
    <string name="error_generic_contact_srx">An error occurred while processing your request. Please contact
        customerservice@srx.com.sg for help.
    </string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_empty_message">Error without description</string>
    <string name="exception_generic">Error occurred</string>
    <string name="exception_empty_message">Empty message</string>
    <string name="exception_parse">Parse exception</string>
    <string name="exception_illegal_argument">Illegal argument exception</string>
    <string name="exception_security">Security Exception</string>
    <string name="exception_class_cast">Class cast exception</string>
    <string name="error_missing_required_fields">Missing required fields</string>
    <string name="exception_empty_response_body">Request success but the response body is empty.</string>
    <string name="exception_fail_parse_success_response">Failed to parse success response.</string>
    <string name="exception_fail_parse_exception">Failed to parse error response.</string>
    <string name="exception_parse_error_illegal_state">Encountered illegal state when parse error.</string>
    <string name="exception_fail_no_object">Error but no response returned.</string>
    <string name="exception_server_error">Server error %s.</string>
    <string name="exception_internal_server_error">Error 500 internal server error.</string>
    <string name="exception_page_not_found">Error 404 page not found.</string>
    <string name="exception_forbidden">Error 403 forbidden.</string>
    <string name="exception_bad_request">Error 400 bad request.</string>
    <string name="exception_server_unavailable">Error 503 server unavailable. Most probably due to backend upgrading,
        please try again later.
    </string>
    <string name="exception_io">Unable to reach server. Please check your internet connection.</string>
    <string name="confirmation_label_yes">Yes</string>
    <string name="confirmation_label_no">No</string>
    <string name="msg_failed_to_generate_token">Failed to generate token. Please contact customerservice@srx.com.sg for help.</string>
    <string name="error_required_field">Required field</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Minimum of 6 characters</string>
    <string name="error_invalid_cea">Invalid CEA registration number</string>
    <string name="error_invalid_mobile">Invalid mobile number</string>
    <string name="login_success">Login success.</string>
    <string name="login_failed">Login failed. %s</string>
    <string name="login_error">Login error. %s</string>
    <string name="error_otp_failed">Verification failed</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_update">Update</string>
    <string name="action_submit">Submit</string>
    <string name="action_delete">Delete</string>
    <string name="action_signing_in">Signing In&#8230;</string>
    <string name="action_updating">Updating&#8230;</string>
    <string name="action_submitting">Submitting&#8230;</string>
    <string name="action_deleting">Deleting&#8230;</string>
    <string name="menu_item_reset">Reset</string>
    <string name="menu_item_search">@string/label_search</string>
    <string name="menu_item_save">@string/label_save</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_favorite">Favorite</string>
    <string name="menu_item_create">Create</string>
    <string name="menu_item_add_new">Add new</string>
    <string name="menu_item_sign_out_from_portal">@string/label_sign_out_from_portal</string>
    <string name="title_welcome">Welcome!</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="label_cea_no">CEA No.</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_cea_and_mobile">Enter CEA &amp; Mobile No.</string>
    <string name="label_customer_service">Customer Service</string>
    <string name="label_reset_account">Reset Account</string>
    <string name="msg_already_account">I already have an account,</string>
    <string name="msg_sign_me_in">sign me in</string>
    <string name="msg_account_creation">Enter your email address and password for future sign in</string>
    <string name="msg_forgot_password">Enter your registered email below and we will send you instructions for setting a
        new password
    </string>
    <string name="msg_reset_account">You have exceeded the number of devices allowed. Please contact SRX (66353388)
        regarding your subscription.
    </string>
    <string name="msg_reset_account_success">Account has been reset</string>
    <string name="msg_send_otp">Successfully send OTP</string>
    <string name="msg_new_version_available">A new version %s is available. Do you want to update?</string>
    <string name="msg_force_update_new_version">Please update your app to continue. This version of the app is no longer supported.</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="msg_otp_screen">Please verify your contact number by entering OTP (One time password) below</string>
    <string name="action_become_subscriber">Become a subscriber</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="msg_non_subscriber_dialog">You don\'t seem to have a subscription</string>
    <string name="msg_subscription_level">This feature isn\'t available at your subscription level</string>
    <string name="msg_subscriber_help">I’m a subscriber, help!</string>
    <string name="msg_subscriber_schedule_call_back">Schedule a call back</string>
    <string name="msg_subscriber_member_features">Consortium member features</string>
    <string name="msg_agree_privacy_policy">Yes, I accept the Privacy Policy</string>
    <string name="msg_schedule_call_back_success">Thank You! Our customer service will be in touch shortly.</string>
    <string name="msg_choose_one_purpose">Please choose become a subscriber</string>
    <string name="msg_subscriber_immediate_access">Schedule a call back to get immediate access to this and other great features</string>
    <string name="content_description_dismiss">Dismiss</string>
    <string name="toast_trial_subscription_activated">Free trial subscription activated</string>
    <string name="label_rent">Rent</string>
    <string name="label_sale">Sale</string>
    <string name="label_room_rental">Room Rental</string>
    <string name="label_vet_listing_what_is">What is</string>
    <string name="label_vet_listing_non_quality">Non-Quality</string>
    <string name="label_vet_listing_picture">pictures?</string>
    <string name="label_non_quality_photo_info">Non-Quality is determined based on the following</string>
    <string name="label_non_quality_photo_height">Height of photo</string>
    <string name="label_non_quality_photo_width">Width of photo</string>
    <string name="label_non_quality_photo_contain_face">Photo contains a face</string>
    <string name="label_non_quality_photo_text_within_photo">Text within the photo</string>
    <string name="label_non_quality_photo_blurriness">Blurriness</string>
    <string name="label_non_quality_photo_saturation">Saturation</string>
    <string name="label_what_happens_to_non_quality_listing">What happens to a Non-Quality picture?</string>
    <string name="label_explanation_of_non_quality_listing">You can still proceed with posting but it will be placed at the end of all listing photos</string>
    <string name="label_what_if_system_detects_wrongly">What if system detects wrongly?</string>
    <string name="label_explanation_of_if_system_detects_wrongly">You can request an appeal and after review, it will be not tagged as Non-Quality</string>
    <string name="label_column_transaction_date_sold">Date</string>
    <string name="label_column_transaction_address">Address</string>
    <string name="label_column_transaction_size_sqft">Sqft</string>
    <string name="label_column_transaction_psf">PSF</string>
    <string name="label_column_transaction_price">Price</string>
    <string name="label_column_transaction_area_type">Area</string>
    <string name="label_column_transaction_built_year">Built</string>
    <string name="label_column_transaction_transaction">Type</string>
    <string name="label_column_transaction_unit">Unit</string>
    <string name="column_caveat_date">Date</string>
    <string name="column_caveat_area">Area (Sqft)</string>
    <string name="column_caveat_psf">PSF</string>
    <string name="column_caveat_price">Price</string>
    <string name="msg_agree_to">I agree to</string>
    <string name="msg_terms_of_use">Terms of Use,</string>
    <string name="msg_terms_of_sale">Terms of Sale</string>
    <string name="msg_and">and</string>
    <string name="msg_privacy_policy">Privacy Policy</string>
</resources>