<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexDirection="row"
            app:flexWrap="wrap">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_agree_to" />

        <sg.searchhouse.agentconnect.view.widget.common.ClickableTextView
                android:id="@+id/tv_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:text="@string/msg_terms_of_use" />

        <sg.searchhouse.agentconnect.view.widget.common.ClickableTextView
                android:id="@+id/tv_terms_of_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:text="@string/msg_terms_of_sale" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:text="@string/msg_and" />

        <sg.searchhouse.agentconnect.view.widget.common.ClickableTextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:text="@string/msg_privacy_policy" />
    </com.google.android.flexbox.FlexboxLayout>
</layout>