<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <sg.searchhouse.agentconnect.view.widget.common.AppCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            app:contentPaddingBottom="@dimen/spacing_m"
            app:contentPaddingLeft="0dp"
            app:contentPaddingRight="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_m"
                    android:paddingEnd="@dimen/spacing_m">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_title_1"
                            style="@style/Body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="@dimen/spacing_xxs"
                            android:text="@string/label_vet_listing_what_is" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_title_2"
                            style="@style/BodyOrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="@dimen/spacing_xxs"
                            android:layout_toEndOf="@+id/tv_title_1"
                            android:text="@string/label_vet_listing_non_quality" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="@dimen/spacing_xs"
                            android:layout_toStartOf="@+id/iv_close"
                            android:layout_toEndOf="@+id/tv_title_2"
                            android:text="@string/label_vet_listing_picture" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_close"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/ic_cancel" />


                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_info" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_height" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_width" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_contain_face" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_text_within_photo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_blurriness" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_non_quality_photo_saturation" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_l"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_what_happens_to_non_quality_listing" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:layout_marginBottom="0dp"
                        android:lineSpacingExtra="@dimen/spacing_xs"
                        android:text="@string/label_explanation_of_non_quality_listing" />


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_l"
                        android:layout_marginBottom="0dp"
                        android:text="@string/label_what_if_system_detects_wrongly" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BodyGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:layout_marginBottom="0dp"
                        android:lineSpacingExtra="@dimen/spacing_xs"
                        android:text="@string/label_explanation_of_if_system_detects_wrongly" />

                </LinearLayout>
            </ScrollView>
        </sg.searchhouse.agentconnect.view.widget.common.AppCardView>
    </FrameLayout>
</layout>
