<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<import type="sg.searchhouse.agentconnect.util.StringUtil" />

		<variable
				name="caveat"
				type="sg.searchhouse.agentconnect.model.api.transaction.TowerViewForLastSoldTransactionResponse.PreviousUnitTransactionsItem" />
	</data>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_xs"
			android:layout_marginEnd="@dimen/spacing_xs"
			android:orientation="horizontal">

		<TextView
				style="@style/Title"
				android:layout_width="@dimen/column_caveat_date"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:lines="1"
				android:padding="@dimen/spacing_xs"
				android:text="@string/column_caveat_date"
				android:textAlignment="textStart" />

		<TextView
				style="@style/Title"
				android:layout_width="@dimen/column_caveat_area"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:lines="1"
				android:padding="@dimen/spacing_xs"
				android:text="@string/column_caveat_area"
				android:textAlignment="textStart" />

		<TextView
				style="@style/Title"
				android:layout_width="@dimen/column_caveat_psf"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:lines="1"
				android:padding="@dimen/spacing_xs"
				android:text="@string/column_caveat_psf"
				android:textAlignment="textStart" />

		<TextView
				style="@style/Title"
				android:layout_width="@dimen/column_caveat_price"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:lines="1"
				android:padding="@dimen/spacing_xs"
				android:text="@string/column_caveat_price"
				android:textAlignment="textStart" />
	</LinearLayout>
</layout>