<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="visibility"
            type="Integer" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{visibility}">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_date_sold"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:paddingStart="@dimen/spacing_m"
                android:paddingTop="@dimen/spacing_xs"
                android:paddingEnd="@dimen/spacing_xs"
                android:paddingBottom="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_date_sold"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_address"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_address"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_price"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_price"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_size_sqft"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_size_sqft"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_psf"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_psf"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_area_type"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_area_type"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_built_year"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_built_year"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallBodyBold"
                android:layout_width="@dimen/column_width_transaction_transaction"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/spacing_xs"
                android:text="@string/label_column_transaction_transaction"
                android:textAlignment="textStart" />
        </LinearLayout>

        <include layout="@layout/view_divider_horizontal" />
    </LinearLayout>
</layout>