<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_sale"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_l"
            android:background="@color/transparent"
            android:text="@string/label_sale" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_rent"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_l"
            android:background="@color/transparent"
            android:text="@string/label_rent" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_room_rental"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/label_room_rental" />
    </RadioGroup>
</layout>